--- a/server/public/.htaccess
+++ b/server/public/.htaccess
@@ -2,7 +2,7 @@ Options -Indexes
 
 
 RewriteEngine On
-RewriteBase /billsystem
+RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
