Created ProfileActivity and its .xml layout and updated .gitignore for a cleaner repository

--- a/android/PromGameMobile/AndroidManifest.xml
+++ b/android/PromGameMobile/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name="pt.techzebra.promgamemobile.ui.AuthenticationActivity"
             android:noHistory="true"
             android:excludeFromRecents="true" />
+        
+        <activity android:name="pt.techzebra.promgamemobile.ui.ProfileActivity"
+            android:label="Profile" />
     </application>
 
 </manifest>
