--- a/server/public/.htaccess.example
+++ b/server/public/.htaccess.example
@@ -4,7 +4,7 @@ Options -Indexes
 
 
 RewriteEngine On
-RewriteBase /
+#RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
