--- a/android/PromGameMobile/AndroidManifest.xml
+++ b/android/PromGameMobile/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:excludeFromRecents="true" />
         
         <activity android:name="pt.techzebra.promgamemobile.ui.ProfileActivity" />
+        
+        <activity android:name="pt.techzebra.promgamemobile.games.quiz.QuizActivity" />
     </application>
 
 </manifest>
