--- a/android/PromGameMobile/AndroidManifest.xml
+++ b/android/PromGameMobile/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name="pt.techzebra.promgamemobile.PromGame"
