--- a/android/PromGameMobile/AndroidManifest.xml
+++ b/android/PromGameMobile/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="pt.techzebra.promgamemobile.ui.DashboardActivity" >
+        <activity 
+            android:name="pt.techzebra.promgamemobile.ui.DashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +30,9 @@
             android:excludeFromRecents="true" />
         
         <activity android:name="pt.techzebra.promgamemobile.ui.RegistrationActivity" />
-        
+         <activity android:name="pt.techzebra.promgamemobile.ui.BadgesActivity" />
         <activity android:name="pt.techzebra.promgamemobile.ui.ProfileActivity" />
-        
+         <activity android:name="pt.techzebra.promgamemobile.ui.TagsActivity" />
         <activity android:name="pt.techzebra.promgamemobile.games.quiz.QuizActivity" />
     </application>
 
