--- a/android/PromGameMobile/AndroidManifest.xml
+++ b/android/PromGameMobile/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -16,23 +17,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity 
-            android:name="pt.techzebra.promgamemobile.ui.DashboardActivity" >
+        <activity android:name="pt.techzebra.promgamemobile.ui.DashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="pt.techzebra.promgamemobile.ui.AuthenticationActivity"
-            android:noHistory="true"
-            android:excludeFromRecents="true" />
-        
+        <activity
+            android:name="pt.techzebra.promgamemobile.ui.AuthenticationActivity"
+            android:excludeFromRecents="true"
+            android:noHistory="true" />
         <activity android:name="pt.techzebra.promgamemobile.ui.RegistrationActivity" />
-         <activity android:name="pt.techzebra.promgamemobile.ui.BadgesActivity" />
+        
+        <activity android:name="pt.techzebra.promgamemobile.ui.PromotionsActivity" />
+        
+        <activity android:name="pt.techzebra.promgamemobile.ui.BadgesActivity" />
         <activity android:name="pt.techzebra.promgamemobile.ui.ProfileActivity" />
-         <activity android:name="pt.techzebra.promgamemobile.ui.TagsActivity" />
+        <activity android:name="pt.techzebra.promgamemobile.ui.TagsActivity" />
         <activity android:name="pt.techzebra.promgamemobile.games.quiz.QuizActivity" />
     </application>
 
