--- a/android/PromGameMobile/project.properties
+++ b/android/PromGameMobile/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-17
 android.library.reference.1=..\\ActionBarSherlock\\library
-android.library.reference.2=../StaggeredGridView
+android.library.reference.2=..\\StaggeredGridView
