--- a/android/WinIt/AndroidManifest.xml
+++ b/android/WinIt/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity android:name="pt.techzebra.winit.ui.EditProfileActivity" />
         <activity android:name="pt.techzebra.winit.games.quiz.QuizActivity" />
         <activity android:name="pt.techzebra.winit.ui.TradingActivity" />
-        <activity android:name="pt.techzebra.winit.ui.TradingPromotionActivity" />
+        <activity android:name="pt.techzebra.winit.ui.TradingPromotionActivity" android:uiOptions="splitActionBarWhenNarrow"/>
         <activity android:name="pt.techzebra.winit.ui.ShowPromotionsToTrade" />
     </application>
 
