--- a/android/WinIt/AndroidManifest.xml
+++ b/android/WinIt/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity android:name="pt.techzebra.winit.games.quiz.QuizActivity" />
         <activity android:name="pt.techzebra.winit.ui.TradingActivity" />
         <activity android:name="pt.techzebra.winit.ui.TradingPromotionActivity" android:uiOptions="splitActionBarWhenNarrow"/>
-        <activity android:name="pt.techzebra.winit.ui.ShowPromotionsToTrade" />
+        <activity android:name="pt.techzebra.winit.ui.TradeablePromotionsFragmentActivity" />
     </application>
 
 </manifest>
