--- a/android/WinIt/project.properties
+++ b/android/WinIt/project.properties
@@ -16,4 +16,5 @@ android.library.reference.1=..\\StaggeredGridView
 android.library.reference.2=..\\FacebookSDK
 android.library.reference.3=..\\ViewPagerIndicator
 android.library.reference.4=..\\ActionBarSherlock
-android.library.reference.5=../StickyScrollViewItems
+android.library.reference.5=..\\StickyScrollViewItems
+android.library.reference.6=../PagerSlidingTabStrip
