--- a/android/WinIt/AndroidManifest.xml
+++ b/android/WinIt/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+         <activity android:name="com.facebook.LoginActivity" />
         <activity
             android:name="pt.techzebra.winit.ui.DashboardActivity"
             android:configChanges="orientation"
