Android facebook login fixed.

--- a/android/WinIt/project.properties
+++ b/android/WinIt/project.properties
@@ -12,9 +12,9 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\StaggeredGridView
-android.library.reference.2=..\\FacebookSDK
+android.library.reference.1=../FacebookSDK
+android.library.reference.2=..\\StaggeredGridView
 android.library.reference.3=..\\ViewPagerIndicator
 android.library.reference.4=..\\ActionBarSherlock
 android.library.reference.5=..\\StickyScrollViewItems
-android.library.reference.6=../PagerSlidingTabStrip
+android.library.reference.6=..\\PagerSlidingTabStrip
