--- a/android/WinIt/AndroidManifest.xml
+++ b/android/WinIt/AndroidManifest.xml
@@ -17,12 +17,13 @@
         android:name="pt.techzebra.winit.WinIt"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-         <activity android:name="com.facebook.LoginActivity" />
+        <activity android:name="com.facebook.LoginActivity" />
         <activity
             android:name="pt.techzebra.winit.ui.DashboardActivity"
             android:configChanges="orientation"
