--- a/android/WinIt/AndroidManifest.xml
+++ b/android/WinIt/AndroidManifest.xml
@@ -118,6 +118,11 @@
             android:name="pt.techzebra.winit.ui.TradeablePromotionsFragmentActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="pt.techzebra.winit.ui.PromotionCodeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
